config: authorize native JNI access for GraalVM build
Added `--enable-native-access=ALL-UNNAMED` to the `graalVMNativeImageOptions`
list in `build.sbt`.

### Root Cause
Under Java 22+ (JEP 454/JEP 472), calling JNI / native-access methods (such
as Netty's `System.loadLibrary` calls) is considered a restricted operation.
By default, the JVM prints a warning message when these methods are invoked:
`WARNING: A restricted method in java.lang.System has been called`

Since the application compiles to a standalone GraalVM native binary,
these warnings are emitted at runtime.

### Solution
Specifying `--enable-native-access=ALL-UNNAMED` at build time authorizes
native access for the unnamed module within the compiled binary, resolving
the runtime warning logs and preparing the application for future JVM
releases where restricted native operations will be blocked by default.

### Discussion & Reference
* OpenJDK JEP 472 (Prepare to Restrict The Use of JNI and Restricted Methods):
  https://openjdk.org/jeps/472
* GraalVM Native Image Foreign Function & Memory API configuration:
  https://www.graalvm.org/latest/reference-manual/native-image/guides/use-foreign-function-memory-api/